# KomoGuard

./: Cargo.toml  README.md  activate.sh  cleanup.sh  config.json  setup.sh
src/: alerts.rs  config.rs  main.rs  network.rs  processes.rs  resources.rs  watcher.rs
